test-helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-http-test-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: helloworld-http
